--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "md5": "^2.2.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
